src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Status_Info__c</fullName>
        <label>State Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Consider_Updates_After__c</fullName>
        <label>Consider Updates After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Processed_Count__c</fullName>
        <label>Processed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_FT__c</fullName>
        <label>Ad Campaign Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_LC__c</fullName>
        <label>Ad Campaign Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_FT__c</fullName>
        <label>Landing Page (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_LC__c</fullName>
        <label>Landing Page (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_FT__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_LC__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_FT__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (FT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_LC__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (LC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_FT__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (FT)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_LC__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>